--- a/testentgraph.html
+++ b/testentgraph.html
@@ -12,8 +12,8 @@
 <style type="text/css">
 
         #mynetwork {
-            width: 80%;
-            height: 80%;
+            width: 100%;
+            height: 600px;
             background-color: #ffffff;
             border: 1px solid lightgray;
             position: relative;
