--- a/testentgraph.html
+++ b/testentgraph.html
@@ -56,7 +56,7 @@
         // adding nodes and edges to the graph
         data = {nodes: nodes, edges: edges};
 
-        var options = {"nodes": {"borderWidth": null, "borderWidthSelected": null, "opacity": null, "font": {"strokeWidth": 3}, "size": null}, "edges": {"arrows": {"to": {"enabled": true, "scaleFactor": 0.35}}, "color": {"inherit": true}, "selfReferenceSize": 17, "selfReference": {"size": 15, "angle": 0.7853981633974483}, "smooth": {"forceDirection": "none"}}, "interaction": {"dragNodes": false, "navigationButtons": true}, "physics": {"barnesHut": {"gravitationalConstant": -6400, "avoidOverlap": 0.2}, "minVelocity": 0.75}};
+        var options = {"nodes": {"borderWidth": null, "borderWidthSelected": null, "opacity": null, "font": {"strokeWidth": 3}, "size": null}, "edges": {"arrows": {"to": {"enabled": true, "scaleFactor": 0.35}}, "color": {"inherit": true}, "selfReferenceSize": 17, "selfReference": {"size": 15, "angle": 0.7853981633974483}, "smooth": {"forceDirection": "none"}}, "interaction": {"navigationButtons": true}, "physics": {"enabled": false, "barnesHut": {"theta": 0.45, "gravitationalConstant": -6500, "centralGravity": 0, "springLength": 315, "springConstant": 0.17, "damping": 0.74, "avoidOverlap": 0.2}, "maxVelocity": 51, "minVelocity": 10, "timestep": 0.49}};
         
         
 
